--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.0.0-rc.0",
+    "@material-ui/icons": "^4.0.1",
     "@types/jest": "^24.0.13",
     "@types/node": "^12.0.7",
     "@types/react": "^16.8.19",
@@ -13,6 +14,7 @@
     "react-scripts": "3.0.1",
     "typescript": "^3.5.1"
   },
+  "homepage": "yuki-js.github.io/circlez",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
